# voicemcp_server

./: .gitignore  CONTEXT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test_tts.py
.claude/: mcp.json  settings.local.json
elise_voice_server/: __init__.py  __main__.py  server.py  tts_engine.py  voice_dataset.py
src/: elise_voice_server.py  tts_engine.py  voice_dataset.py
